--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Untree.co">
   <link rel="shortcut icon" href="favicon.png">
+<meta name="apple-mobile-web-app-capable" content="yes" />
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
