--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Untree.co">
   <link rel="shortcut icon" href="favicon.png">
 <meta name="apple-mobile-web-app-capable" content="yes" />
