--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Untree.co">
   <link rel="shortcut icon" href="favicon.png">
-<meta name="apple-mobile-web-app-capable" content="yes" />
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
@@ -22,15 +21,14 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="css/tiny-slider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<title>OPENCORE | HOME</title>
+		<title> HOME </title>
 	</head>
 
 	<body>
 
 		<!-- Start Header/Navigation -->
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
-
-			<div class="container">
+		  <div class="container">
 				<a class="navbar-brand" href="index.html"><img src="images/logo.png"></a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +38,7 @@
 				<div class="collapse navbar-collapse" id="navbarsFurni">
 					<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
 						<li class="nav-item active">
-							<a class="nav-link" href="/index.html">Home</a>
+							<a class="nav-link" href="index.html">Home</a>
 						</li>
 						<li><a class="nav-link" href="htmls/shop.html">Shop</a></li>
 						<li><a class="nav-link" href="htmls/about.html">About us</a></li>
@@ -60,23 +58,99 @@
 		<!-- End Header/Navigation -->
 
 		<!-- Start Hero Section -->
-			<div class="hero">
-				<div class="container">
-					<div class="row justify-content-between">
-						<div class="col-lg-5">
-							<div class="intro-excerpt">
-								<h1>STEALTH&nbsp;&nbsp; <span clsas="d-block">SERIES</span></h1>
-								<p class="mb-4">AMD RYZEN AI MAX+ 395 | RTX 5090 32GB | 128GB DDR6 RAM | 4TB GEN 5 SSD | 18'INCH OLED DISPLAY | 6 X 2W SPEAKER&nbsp;</p>
-								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
+	<div class="hero" id="boxsizer">
+	  <div class="testimonial-section before-footer-section" >
+				<div class="container" id="sizer" >
+				<div class="row justify-content-center">
+					<div class="col-lg-12">
+					  <div class="testimonial-slider-wrap text-center">
+
+						<div id="testimonial-nav">
+								<span class="prev" data-controls="prev"><span class="fa fa-chevron-left"></span></span>
+								<span class="next" data-controls="next"><span class="fa fa-chevron-right"></span></span>
 						  </div>
-						</div>
-						<div class="col-lg-7">
-							<div class="hero-img-wrap">
-								<img src="images/couch.png" class="img-fluid">
-							</div>
+
+						  <div class="testimonial-slider" >
+								
+							  <div class="item" >
+								  <div class="row justify-content-center">
+									  <div class="col-lg-8 mx-auto">
+
+										  <div class="testimonial-block text-center">
+											  <div class="row justify-content-between">
+												  <div class="col-lg-5">
+													  <div class="intro-excerpt">
+														  <h1>STEALTH <span clsas="d-block">SERIES</span></h1>
+														  <p class="mb-4">AMD RYZEN AI MAX+ 395 | RTX 5090 32GB | 128GB DDR6 RAM | 4TB GEN5 SSD | 18'INCH OLED DISPLAY | 6 X 2W SPEAKER&nbsp;</p>
+														  <p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
+												    </div>
+												  </div>
+												<div class="col-lg-7">
+														<img src="images/couch.png" class="img-fluid">
+												</div>
+											</div>
+										  </div>
+
+									  </div>
+								  </div>
+							  </div> 
+							  <!-- END item -->
+
+							  <div class="item">
+								  <div class="row justify-content-center">
+									  <div class="col-lg-8 mx-auto">
+
+										  <div class="testimonial-block text-center">
+											  <div class="row justify-content-between">
+												  <div class="col-lg-5">
+													  <div class="intro-excerpt">
+														  <h1>POWER&nbsp;&nbsp; <span clsas="d-block">SERIES</span></h1>
+														  <p class="mb-4">AMD RYZEN AI MAX+ 295 | RTX 5080 24GB | 64GB DDR6 RAM | 2TB GEN5 SSD | 18'INCH OLED DISPLAY | 6 X 2W SPEAKER&nbsp;</p>
+														  <p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
+												    </div>
+												  </div>
+												<div class="col-lg-7">
+														<img src="images/laptop photo.png" class="img-fluid">
+												</div>
+											</div>
+										  </div>
+
+									  </div>
+								  </div>
+							  </div> 
+							  <!-- END item -->
+
+							  <div class="item">
+								  <div class="row justify-content-center">
+									  <div class="col-lg-8 mx-auto">
+
+										  <div class="testimonial-block text-center">
+											  <div class="row justify-content-between">
+												  <div class="col-lg-5">
+													  <div class="intro-excerpt">
+														  <h1>SPACE&nbsp;&nbsp; <span clsas="d-block">SERIES</span></h1>
+														  <p class="mb-4">AMD RYZEN AI MAX+ 195 | RTX 5070 16GB | 32GB DDR6 RAM | 1TB GEN5 SSD | 18'INCH OLED DISPLAY | 6 X 2W SPEAKER&nbsp;</p>
+														  <p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
+												    </div>
+												  </div>
+												<div class="col-lg-7">
+														<img src="images/LAPTOP2.png" class="img-fluid">
+												</div>
+											</div>
+										  </div>
+
+									  </div>
+								  </div>
+							  </div> 
+							  <!-- END item -->
+
+						  </div>
+
 						</div>
 					</div>
 				</div>
+				</div>
+			</div>
 			</div>
 		<!-- End Hero Section -->
 
@@ -87,8 +161,8 @@
 
 					<!-- Start Column 1 -->
 					<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-						<h2 class="mb-4 section-title">Crafted with excellent material.</h2>
-						<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. </p>
+						<h2 class="mb-4 section-title">Crafted with excellent mind.</h2>
+						<p class="mb-4">Evey parts of the Laptos are moduled so when ever we want we can upgrad. Our cart also has swap modules for your laptops</p>
 						<p><a href="htmls/shop.html" class="btn">Explore</a></p>
 					</div> 
 					<!-- End Column 1 -->
@@ -97,7 +171,7 @@
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="htmls/cart.html">
 							<img src="images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
+							<h3 class="product-title">Product Red</h3><h3 class="product-title">AMD RYZEN AI MAX+ 395 | RTX 5090 32GB | 128GB DDR7 RAM | 4TB GEN6 SDD</h3>
 							<strong class="product-price">$50.00</strong>
 
 							<span class="icon-cross">
@@ -111,7 +185,8 @@
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="htmls/cart.html">
 							<img src="images/product-2.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kruzo Aero Chair</h3>
+							<h3 class="product-title">Power Series&nbsp;</h3>
+							<h3 class="product-title">AMD RYZEN AI MAX+ 295 | RTX 5080 24GB | 64GB DDR6 RAM | 2TB GEN5 SSD</h3>
 							<strong class="product-price">$78.00</strong>
 
 							<span class="icon-cross">
@@ -122,16 +197,17 @@
 					<!-- End Column 3 -->
 
 					<!-- Start Column 4 -->
+					
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="htmls/cart.html">
+					  <a class="product-item" href="htmls/cart.html">
 							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
-							<strong class="product-price">$43.00</strong>
+							<h3 class="product-title">Space series</h3><h3 class="product-title">AMD RYZEN AI MAX+ 195 | RTX 5070 32GB | 32GB DDR6 RAM | 1TB GEN5 SSD</h3>
+						  <strong class="product-price">$43.00</strong>
 
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
+						  <span class="icon-cross">
+							  <img src="images/cross.svg" class="img-fluid">
+						  </span>
+					  </a>
 					</div>
 					<!-- End Column 4 -->
 
@@ -146,16 +222,16 @@
 				<div class="row justify-content-between">
 					<div class="col-lg-6">
 						<h2 class="section-title">Why Choose Us</h2>
-						<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-
-						<div class="row my-5">
-							<div class="col-6 col-md-6">
+						<p>We make best Gaming and Work machine which also eco-friendly and reduce e-waste with module laptops. In other case our strength</p>
+					  <p>&nbsp;</p>
+<div class="row my-5">
+			<div class="col-6 col-md-6">
 								<div class="feature">
 									<div class="icon">
 										<img src="images/truck.svg" alt="Image" class="imf-fluid">
 									</div>
 									<h3>Fast &amp; Free Shipping</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<p>We support all over the world delivery. Get hands on your product within 42hrs of order. </p>
 								</div>
 							</div>
 
@@ -165,7 +241,7 @@
 										<img src="images/bag.svg" alt="Image" class="imf-fluid">
 									</div>
 									<h3>Easy to Shop</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<p>Making online shopping very easy select the series and modules, you own a dream laptop.</p>
 								</div>
 							</div>
 
@@ -175,7 +251,7 @@
 										<img src="images/support.svg" alt="Image" class="imf-fluid">
 									</div>
 									<h3>24/7 Support</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<p>We expand our support in both online and offline.</p>
 								</div>
 							</div>
 
@@ -185,7 +261,7 @@
 										<img src="images/return.svg" alt="Image" class="imf-fluid">
 									</div>
 									<h3>Hassle Free Returns</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<p>Door step returns and replacements, Our prducts will knock your doors.</p>
 								</div>
 							</div>
 
@@ -194,7 +270,7 @@
 
 					<div class="col-lg-5">
 						<div class="img-wrap">
-							<img src="images/why-choose-us-img1.png" alt="Image" class="img-fluid">
+							<img src="images/why-choose-us-img1.png" alt="Image" class="img-fluid" width="100%">
 						</div>
 					</div>
 
@@ -215,14 +291,14 @@
 						</div>
 					</div>
 					<div class="col-lg-5 ps-lg-5">
-						<h2 class="section-title mb-4">We Help You Make Modern Interior Design</h2>
-						<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
+						<h2 class="section-title mb-4">We Help You Make Modern CUSTOM LAPTOP</h2>
+						<p>Select a model with prefered screen size  and swap module, place your orders, Get your hands on product within 42hrs, Just plug and play like legos.</p>
 
 						<ul class="list-unstyled custom-list my-4">
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
-							<li>Donec vitae odio quis nisl dapibus malesuada</li>
+						  <li>Reduces e-waste buy the swap modules to upgrade.</li>
+							<li>Easy customizatrion to core to enable more productivity</li>
+							<li>Increases laptop life to maximize your satisfaction</li>
+							<li>Support Right to Repair and tool less disassembly laptop </li>
 						</ul>
 						<p><a herf="#" class="btn">Explore</a></p>
 					</div>
@@ -242,8 +318,8 @@
 								<img src="images/product-1.png" alt="Image" class="img-fluid">
 							</div>
 							<div class="pt-3">
-								<h3>Nordic Chair</h3>
-								<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
+								<h3>Product Red</h3>
+								<p>A Special edition laptop to experience latest DDR7 Ram and fastest Gen6 SSD </p>
 								<p><a href="#">Read More</a></p>
 							</div>
 						</div>
@@ -255,8 +331,8 @@
 								<img src="images/product-2.png" alt="Image" class="img-fluid">
 							</div>
 							<div class="pt-3">
-								<h3>Kruzo Aero Chair</h3>
-								<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
+								<h3>Power series</h3>
+								<p>Our Mid-range laptop slim as Business laptops and perform like gaming laptops</p>
 								<p><a href="#">Read More</a></p>
 							</div>
 						</div>
@@ -268,8 +344,8 @@
 								<img src="images/product-3.png" alt="Image" class="img-fluid">
 							</div>
 							<div class="pt-3">
-								<h3>Ergonomic Chair</h3>
-								<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
+								<h3>Space series</h3>
+								<p>Our base spec laptops to support remote game sessions and workspace together.</p>
 								<p><a href="#">Read More</a></p>
 							</div>
 						</div>
@@ -293,7 +369,7 @@
 					<div class="col-lg-12">
 						<div class="testimonial-slider-wrap text-center">
 
-							<div id="testimonial-nav">
+							<div id="testimonial-nav1">
 								<span class="prev" data-controls="prev"><span class="fa fa-chevron-left"></span></span>
 								<span class="next" data-controls="next"><span class="fa fa-chevron-right"></span></span>
 							</div>
