--- a/htmls/shop.html
+++ b/htmls/shop.html
@@ -57,8 +57,8 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>Modern Interior <span clsas="d-block">Design Studio</span></h1>
-								<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
+								<h1>Product Red<span clsas="d-block">Modern Top-end</span></h1>
+								<p class="mb-4">AMD RYZEN AI MAX+ 395 | RTX 5090 32GB | 128GB DDR7 RAM | 4TB GEN6 SDD <br> Follow Latest Gen with Latest Tech</p>
 								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a></a></p>
 							</div>
 						</div>
